--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       { value: 'Email', title: 'Email' },
     ],
     ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
+    height: 300
   });
 </script>
-<textarea>
-  Welcome to TinyMCE!
-</textarea>
+<textarea id="editor"></textarea>
