--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!-- Place the first <script> tag in your HTML's <head> -->
-<script src="https://cdn.tiny.cloud/1/41h7ia2lzzsgftcxdpxio637az203riayp39ssdi4i5jxc23/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
-
-<!-- Place the following <script> and <textarea> tags your HTML's <body> -->
-<script>
-  tinymce.init({
-    selector: '#editor',
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="https://cdn.tiny.cloud/1/41h7ia2lzzsgftcxdpxio637az203riayp39ssdi4i5jxc23/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+      tinymce.init({
+        selector: '#editor',
         plugins: 'lists link image table code',
         toolbar: 'undo redo | bold italic underline | alignleft aligncenter alignright | bullist numlist | link image | code',
         height: 300
-  });
-</script>
-<textarea id="editor"></textarea>
+      });
+    </script>
+  </head>
+  <body>
+    <textarea id="editor"></textarea>
+  </body>
+</html>
