--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </script>
   </head>
   <body>
-    <textarea id="editor"></textarea>
+    <textarea id="editor">TESTE TESTE</textarea>
   </body>
 </html>
