--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       // Try the most popular premium features until Apr 10, 2025:
       //'checklist', 'mediaembed', 'casechange', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'editimage', 'advtemplate', 'ai', 'mentions', 'tinycomments', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown','importword', 'exportword', 'exportpdf'
     ],
-    toolbar: 'language',
-    content_langs: [
+    toolbar: 'language undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+    content_langs: [  
     { title: 'English', code: 'en' },
     { title: 'Spanish', code: 'es' },
     { title: 'French', code: 'fr' },
     { title: 'German', code: 'de' },
     { title: 'Portuguese', code: 'pt' },
-    { title: 'Chinese', code: 'zh' }
+    { title: 'Chinese', code: 'zh' }],
   ]
     tinycomments_mode: 'embedded',
     tinycomments_author: 'Author name',
