--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     { title: 'French', code: 'fr' },
     { title: 'German', code: 'de' },
     { title: 'Portuguese', code: 'pt' },
-    { title: 'Chinese', code: 'zh' }],
-  ]
+    { title: 'Chinese', code: 'zh' }
+  ],
     tinycomments_mode: 'embedded',
     tinycomments_author: 'Author name',
     mergetags_list: [
