--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
   tinymce.init({
     selector: 'textarea',
-    language_url: '/path/to/language/pack/fi.js',
+    language_url: 'https://github.com/feraamorim/tinymce/blob/main/pt_BR.js',
     language: 'pt_BR',
     plugins: [
       // Core editing features
