--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
   tinymce.init({
     selector: 'textarea',
-    language_url: '/pt_BR.js',
+    language_url: 'pt_BR.js',
     language: 'pt_BR',
     plugins: [
       // Core editing features
